// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Customer TitleWrapper should custom link because it is set 1`] = `
<a
  href="https://gorgias.io/a8s4d86as54d/"
  rel="noopener noreferrer"
  target="_blank"
/>
`;

exports[`Customer TitleWrapper should render default link because no custom link is set 1`] = `
<a
  href="https://mystore.myshopify.com/tools/recurring/customers/a8s4d86as54d/"
  rel="noopener noreferrer"
  target="_blank"
/>
`;
